rancher-desktop/k8s/room.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: room
spec:
  # Room state is held in memory; keep a single replica.
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: room
  template:
    metadata:
      labels:
        app.kubernetes.io/name: room
    spec:
      containers:
        - name: room
          image: alswl/excalidraw-room-go:v0.1.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: room
spec:
  selector:
    app.kubernetes.io/name: room
  ports:
    - port: 80
