rancher-desktop/k8s/storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: storage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: storage
    spec:
      containers:
        - name: storage
          image: alswl/excalidraw-storage-backend:v2023.11.11
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: storage
spec:
  selector:
    app.kubernetes.io/name: storage
  ports:
    - port: 80
      targetPort: 8080
